--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         calculationselectionlabel.h calculationselectionlabel.cpp
         matrix.h matrix.cpp
         matrixpane.h matrixpane.cpp
+        matrixpage.h matrixpage.cpp
 
     )
 # Define target properties for Android with Qt 6 as:
