--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         matrixpage.h matrixpage.cpp
         volatilestackedwidget.h volatilestackedwidget.cpp
         reducedmatrix.h reducedmatrix.cpp
+        labelpane.h labelpane.cpp
 
 
     )
