--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Widgets)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -79,6 +80,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         numbers/polynomial.h numbers/polynomial.cpp
         numbers/sturm.h numbers/sturm.cpp
         numbers/polynomialmatrix.h numbers/polynomialmatrix.cpp
+        panes/eigenpane.h panes/eigenpane.cpp
+        numbers/eigenspace.h
 
 
     )
@@ -111,6 +114,7 @@ target_link_libraries(MatCalc PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION
 target_link_libraries(MatCalc PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Widgets)
 target_link_libraries(MatCalc PRIVATE Qt${QT_VERSION_MAJOR}::Core)
 target_link_libraries(MatCalc PRIVATE Qt${QT_VERSION_MAJOR}::Core)
+target_link_libraries(MatCalc PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Widgets)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
